fix ein-3935 align form fields

--- a/src/app/dashboard/dashboard-control/quick-order/quick-order-form/quick-order-form.component.scss
+++ b/src/app/dashboard/dashboard-control/quick-order/quick-order-form/quick-order-form.component.scss
@@ -18,15 +18,15 @@
 
     .order-type-status-form {
       display: flex;
-      flex: 1;
+      width: 60%;
 
       .order-type-container {
         flex: 1;
-        padding-right: 12px;
       }
 
       .order-status {
-        width: 32%;
+        width: 32.39%;
+        padding-left: 10px;
       }
     }
   }
@@ -58,7 +58,8 @@
 
   .job-description {
     margin: 0;
-    padding-left: 12px;
+    padding-left: 10px;
+    box-sizing: border-box;
   }
 
   ejs-textbox.e-control {
@@ -95,4 +96,8 @@
 
 .form-line-item-60 {
   width: 60%;
+}
+
+.contact-details-title-container {
+  flex: 1;
 }
